# Stock-Price-Tracker

./: .gitignore  README.md  pyproject.toml
Stock_Get_and_Notify/: analysis.py  control.py  data.py  login_auth.py  notify.py  stock_main.py
